@@ -1,5 +1,10 @@
 2005-01-20  Sam Steingold  <sds@gnu.org>
 
+	* control.d (activate_bindings): new function (extracted from LET)
+	(LET, LOCALLY): use it
+
+2005-01-20  Sam Steingold  <sds@gnu.org>
+
 	* control.d (LET, LET*, MULTIPLE-VALUE-BIND): simplified control flow
 
 2004-01-20  Bruno Haible  <bruno@clisp.org>
